<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PhotoStory</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_prefs">PrefsActivity</string>
    <string name="toolbarback">toolBarBack</string>
    <string name="toolbarmenu">toolBarMenu</string>
    <string name="toolbarphone">toolBarPhone</string>
    <string name="toolbarphoto">toolBarPhoto</string>
    <string name="toolbarcalendar">toolBarCalendar</string>
    <string name="toolbarmaps">toolBarMaps</string>
    <string name="scatta_foto">Scatta foto</string>
    <string name="vedi_galleria">Vedi galleria</string>
    <string name="gestione_album">Gestione Album</string>
    <string name="title_activity_acquired_images">AcquiredImages</string>
    <string name="detailstitle">detailsTitle</string>
    <string name="detailsdescription">detailsDescription</string>
    <string name="detailslatitude">detailsLatitude</string>
    <string name="detailslongitude">detailsLongitude</string>
    <string name="detailsid">detailsID</string>
    <string name="detailsimage">detailsImage</string>
    <string name="detailspathfilename">detailsPathFileName</string>
    <string name="title_activity_edit_details">EditDetails</string>
    <string name="photo_title">Photo Title</string>
    <string name="photo">Photo</string>
    <string name="photo_description">Photo Description</string>
    <string name="PhotoID">PhotoID</string>
    <string name="PhotoTakeDateTime"></string>
    <string name="phototakedatetime">PhotoTakeDateTime</string>
    <string name="photolastupdatedatetime">PhotoLastUpdateDateTime</string>
    <string name="immagini_preferite">Immagini preferite</string>

</resources>
