<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
 android:orientation="vertical"
    android:background="@drawable/main_bg_gradient"
    tools:context=".EditDetails" >
   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:background="@android:color/darker_gray"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/tbBtnBack"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_gravity="top|center_horizontal"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/toolbarback"
            android:paddingBottom="0dp"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:paddingTop="0dp"
            android:src="@drawable/btn_back" />
                <ImageButton
            android:id="@+id/tbBtnUpdate"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_gravity="top|center_horizontal"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/toolbarback"
            android:paddingBottom="0dp"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:paddingTop="0dp"
            android:src="@drawable/btn_back" />
        </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:paddingBottom="30dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="30dp"
         >
         
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_launcher" 
                android:contentDescription="@string/photo"/>

            <EditText
                android:id="@+id/etPhotoTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/photo_title"
                android:ems="10" >
                    <requestFocus />
            </EditText>
	
            <EditText
                android:id="@+id/etPhotoDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/photo_description"
                android:ems="10" >

            
            </EditText>

            <TextView
                android:id="@+id/tvPhotoID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PhotoID"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/tvPhototakeDateTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phototakedatetime"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/tvPhotoLastUpdateDateTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/photolastupdatedatetime"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            
            </LinearLayout>
    </ScrollView>

</LinearLayout>